# Chat-Great-Productive-inTern

./: .env.example  .gitignore  Cargo.toml  README.md  hopr-pm  index.js  package.json
app/: Cargo.toml
app/src/: cli.rs  constants.rs  git.rs  github.rs  gnosis_vpn.rs  main.rs  openai.rs  util.rs  zulip.rs
db/: Cargo.toml  reps_summary.sqlite
db/migration/: Cargo.toml
db/migration/src/: lib.rs  m20250531_000001_create_pull_requests.rs  m20250531_000002_create_dev_updates.rs
db/src/entity/: dev_update.rs  mod.rs  pull_request.rs
inputs/: input.json
outputs/: items.txt
