[workspace]

resolver = "2"

members = [
    "db",
    "db/migration",
    "app",
]

[workspace.dependencies]
async-trait = "0.1"
arboard = "3.5.0"
chrono = { version = "0.4", features = ["serde"] }
octocrab = "0.44.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-cli = "1.1.12"
sea-orm-migration = "0.12"
tokio = { version = "1", features = ["full"] }

reps-db = { path = "db" }
reps-db-migration = { path = "db/migration" }
