[package]
name = "reps-db-migration"
description = "Contains database migrations for a Reps summary database"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-only"


[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
reps-db = { workspace = true }